@@ -15,6 +15,8 @@
 
       <properties>
         <property name="bitrate" type="int" />
+        <property name="drop-probability" type="float"
+                  description="workaround for loss of sync"  />
       </properties>
 
     </component>
